# OpenFuse

./: .dockerignore  .gitignore  BACKLOG.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  pnpm-lock.yaml  pnpm-workspace.yaml  ruff.toml
.github/workflows/: deploy-docs.yml  test.yml
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: __init__.py
apps/api/app/api/v1/: __init__.py  routes.py
apps/api/app/api/v1/endpoints/: __init__.py  connectors.py  health.py  jobs.py  pipelines.py
apps/api/app/api/v1/schemas/: __init__.py  connectors.py  health.py  pipelines.py
apps/api/app/core/: __init__.py  config.py
apps/api/app/db/: __init__.py  models.py
apps/api/app/models/: __init__.py
apps/api/app/services/: __init__.py
apps/api/app/services/connectors/: __init__.py  airtable.py  asana.py  base.py  bigquery.py  example.py  facebook_ads.py  gcs.py  github.py  google_analytics.py  google_sheets.py  hubspot.py  intercom.py  jira.py  mailchimp.py  mongodb.py  mysql.py  postgres.py  quickbooks.py  redshift.py  s3.py  salesforce.py  shopify.py  slack.py  snowflake.py  sqlserver.py  stripe.py  twilio.py  zendesk.py
apps/api/app/services/policy/: __init__.py
apps/api/app/services/workflows/: __init__.py  tasks.py  worker.py
apps/api/tests/: conftest.py  test_connector_validation.py  test_connectors.py  test_health.py  test_integration.py  test_models.py  test_pipelines.py
apps/web/: README.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vitest.config.e2e.ts  vitest.config.ts
apps/web/app/: layout.tsx  page.tsx
apps/web/e2e/: global-setup.ts
apps/web/styles/: globals.css
apps/web/test/: connector-service.test.ts  connectors-page.test.tsx  home-page-enhanced.test.tsx  (+5 more)
docs/: README.md  testing.md
docs-website/: docusaurus.config.ts  package.json  sidebars.ts
docs-website/docs/: intro.md
docs/architecture/: open-core.md  overview.md
infra/: README.md
infra/docker/: docker-compose.yml  node.Dockerfile  python.Dockerfile
scripts/: bootstrap.sh  generate_connector_catalog.py
(+79 files in other folders)
