[tool.poetry]
name = "openfuse-api"
version = "0.1.0"
description = "Community API service for the OpenFuse data integration platform"
authors = ["OpenFuse Contributors <opensource@openfuse.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
  { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { version = "^0.29.0", extras = ["standard"] }
sqlmodel = "^0.0.16"
psycopg = { version = "^3.1.17", extras = ["binary"] }
python-dotenv = "^1.0.0"
redis = "^5.0.1"
celery = "^5.3.6"
pydantic-settings = "^2.2.1"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
