[tool.poetry]
name = "openfuse-api"
version = "0.1.0"
description = "Community API service for the OpenFuse data integration platform"
authors = ["OpenFuse Contributors <opensource@openfuse.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
  { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { version = "^0.29.0", extras = ["standard"] }
sqlmodel = "^0.0.16"
psycopg = { version = "^3.1.17", extras = ["binary"] }
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
aiomysql = "^0.2.0"
aiobotocore = "^2.11.0"
snowflake-connector-python = "*"
motor = "^3.3.0"
google-cloud-bigquery = "^3.0.0"
google-analytics-data = "^0.18.0"
simple-salesforce = "^1.12.0"
stripe = "^8.0.0"
slack-sdk = "^3.21.0"
aioodbc = "^0.2.0"
gspread = "^5.12.0"
redshift-connector = "^2.0.0"
google-cloud-storage = "^2.14.0"
twilio = "^9.0.0"
alembic = "^1.13.0"
sqlalchemy = "^2.0.0"
python-dotenv = "^1.0.0"
redis = "^5.0.1"
celery = "^5.3.6"
pydantic-settings = "^2.2.1"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
